--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ .Title }}</title>
+    <meta name="robots" content="noindex">
 </head>
+
 <body>
     {{ block "main" . }}{{ end }}
 </body>
+
 </html>
