--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
             <ul>
                 {{ range . }}
                     <li>
-                        <a href="{{ printf "/tags/%s" . | relURL }}">{{ . }}</a>
+                        <a href="{{ printf "/tags/%s" . | relURL }}">{{ .| title }}</a>
                     </li>
                 {{ end }}
             </ul>
@@ -20,6 +20,8 @@
     {{ $currentDir := .File.Dir }}
     {{ with .Resources.Match "*.pdf" }}
         {{ range . }}
+        <a href="{{ .RelPermalink }}">View {{ .Name }}</a>
+        <p>
         <embed src="{{ .RelPermalink }}" width="100%" height="600px" />
         {{ end }}
     {{ end }}
